@@ -1,6 +1,7 @@
 - Install Pathogen as just another Vim plugin as suggested by t9md.
   This requires a change to .vimrc! See "Runtime Path" in the README.
 - BundleCommand runs in ~/.vim/bundle, no longer tied to any bundle.
+- Submodules are autodetected, no need to specify --submodule anymore.
 
 0.8     15 Jul 2011
 - Support Vundle directives so both tools can read the same .vimrc.
